--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
          ╚═╝ ╚═════╝      ╚═╝
                                 
                             
-        "HTB FLAGS"
+      "HTB FLAGS / ACCOUNTS"
 
   </div>
 </header>
