--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <div class="menu">
   <ul>
-    <li><a>Hey, I sell any HTB flag for a good price</a></li>
+    <li><a>Hey, I sell HTB Flags and HTB Accounts for a good price</a></li>
   </ul>
 </div>
